fix: visual bugs with background particles
This commit makes sure the particles fill the entire page when on mobile, and also makes them appear behind any main content boxes.

--- a/portfolio-client/src/app/components/intro/intro-card.module.css
+++ b/portfolio-client/src/app/components/intro/intro-card.module.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    z-index: 99;
 }
 
 .title_space {
