--- a/portfolio-client/src/app/components/lastfm/lastfm.module.css
+++ b/portfolio-client/src/app/components/lastfm/lastfm.module.css
@@ -8,11 +8,12 @@
     color: #ffffff; /* font colour */
     margin: 0;
     max-width: 400px;
-    background: rgba(44, 30, 30, 0.15);
+    background: rgba(241, 0, 0, 0.15);
     font-size: 18px;
     display: flex;
     flex-direction: column;
     gap: 12px;
+    z-index: 99;
 }
 
 .lastfm_card_title {
