--- a/portfolio-client/src/app/components/particles/particles.module.css
+++ b/portfolio-client/src/app/components/particles/particles.module.css
@@ -1,17 +1,20 @@
 .particles_container {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+
     z-index: 3;
     pointer-events: none;
+    min-height: 100vh;
+    height: 100dvh;
 }
 
 .particle {
-    position: absolute;
+    position: fixed;
     background: white;
     border-radius: 50%;
     opacity: 0;
     pointer-events: none;
+    z-index: 3;
 }
